; ModuleID = '/home/carl/AnghaBench/openssl/crypto/ui/extr_ui_openssl.c_popsig.c'
source_filename = "/home/carl/AnghaBench/openssl/crypto/ui/extr_ui_openssl.c_popsig.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@NX509_SIG = common dso_local global i32 0, align 4
@savsig = common dso_local global i32* null, align 8
@SIGABRT = common dso_local global i64 0, align 8
@SIGFPE = common dso_local global i64 0, align 8
@SIGILL = common dso_local global i64 0, align 8
@SIGINT = common dso_local global i64 0, align 8
@SIGSEGV = common dso_local global i64 0, align 8
@SIGTERM = common dso_local global i64 0, align 8
@SIGUSR1 = common dso_local global i32 0, align 4
@SIGUSR2 = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void ()* @popsig to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @popsig() #0 {
  %1 = alloca i32, align 4
  store i32 1, i32* %1, align 4
  br label %2

2:                                                ; preds = %14, %0
  %3 = load i32, i32* %1, align 4
  %4 = load i32, i32* @NX509_SIG, align 4
  %5 = icmp slt i32 %3, %4
  br i1 %5, label %6, label %17

6:                                                ; preds = %2
  %7 = load i32, i32* %1, align 4
  %8 = load i32*, i32** @savsig, align 8
  %9 = load i32, i32* %1, align 4
  %10 = sext i32 %9 to i64
  %11 = getelementptr inbounds i32, i32* %8, i64 %10
  %12 = load i32, i32* %11, align 4
  %13 = call i32 @signal(i32 %7, i32 %12)
  br label %14

14:                                               ; preds = %6
  %15 = load i32, i32* %1, align 4
  %16 = add nsw i32 %15, 1
  store i32 %16, i32* %1, align 4
  br label %2

17:                                               ; preds = %2
  ret void
}

declare dso_local i32 @signal(i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
